[tool.poetry]
name = "01569cbe5730406fdb"
version = "0.1.0"
description = ""
authors = ["dmitrii.mashkov <mashkovd@live.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.9.1"
packaging = "^23.0"
dash-bootstrap-components = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
